<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Life Sim</string>
	<string name="update">Update</string>
	<string name="grow_txt1">General growth rate</string>
	<string name="grow_txt2">Enhanced growth rate</string>
	<string name="rain_txt1">On-Rain growth rate</string>
	<string name="rain_txt2">Rain duration</string>
	<string name="rain_txt3">Rain chances</string>
	<string name="specie_txt1">Replication chances</string>
	<string name="specie_txt2">Energy used to grow</string>
	<string name="specie_txt3">Life expectancy</string>
	<string name="specie_txt4">X coord of first seed</string>
	<string name="specie_txt5">Y coord of first seed</string>
	<string name="specie_txt6">Minimum age to replicate</string>
	<string name="specie_txt7">Minimum energy to replicate</string>
	<string name="specie_txt8">Plague control limit (species red and blue)</string>
	<string name="grow_txt1_hint">0 &#8211; 100 %</string>
	<string name="grow_txt2_hint">0 &#8211; 100 %</string>
	<string name="rain_txt1_hint">0 &#8211; 100 %</string>
	<string name="rain_txt2_hint">1 &#8211; Unlimited</string>
	<string name="rain_txt3_hint">0 &#8211; 100 %</string>
	<string name="specie_txt1_hint">0 &#8211; 100 %</string>
	<string name="specie_txt2_hint">1 &#8211; Unlimited</string>
	<string name="specie_txt3_hint">1 &#8211; Unlimited</string>
	<string name="specie_txt4_hint">0 &#8211; 99</string>
	<string name="specie_txt5_hint">0 &#8211; 99</string>
	<string name="specie_txt6_hint">1 &#8211; Unlimited</string>
	<string name="specie_txt7_hint">1 &#8211; Unlimited</string>
	<string name="specie_txt8_hint">1 &#8211; Unlimited</string>
	<string name="help">\n<b>Basic Information (version 0.15.2 Beta)</b>:\n\nLifeProject wants to be a basic life (ecosystem) simulator.\n\nThis is not a game, is a playable scientific / educational application.\n\nIts recommended to use a double core processor and +4 inches screen to run it.\n\nIf you have slow processor, please setup plague control to adapt the simulation to your device. (see wiki)\n\nTo start / resume the simulation, please go to your device MENU button and press START / RESUME.\n\nThis is a brief abstract, if you want to know how to use the simulator, refer to:\n\nhttps://github.com/ferriman/LifeProject/wiki/LifeProject\n\n<b>Abstract:</b>\n\nThis simulator has an ecosystem with three main elements with their own model and behaviour. The plants (resources), and two species (herbivorous) that compete for it.\n\nYou can configure the model and see how the system evolves through time on the simulation tab. You also can change all the variables on real time and see the changes on the simulation screen.\n\nThe plants are the main resource for the species. At the end of each turn each living plant is evaluated to know if it dies or not. Each plant have an specific amount of energy in relation of its age. This energy will be used for the species to grow.\n\n<b>Plants variables:</b> General growth rate, Enhanced growth rate, On-Rain growth rate, Rain chances and Rain duration.\n\nOn this simulation, there are two species (specie red and specie blue) that compete for resources (plants), that give to the individuals of each specie the energy to grow, move and reproduce itself.\n\n<b>Species variables:</b> Reproduction chances, Max age, Energy used to grow, Minimum age to replicate, Minimum energy to replicate, Plague control limit (for performance issues), X coord of first seed and Y coord of first seed.\n\nYou also have a magnifying glass tapping over the simulation area.\n\n\n\n
\n\n\n\n\n\n
	</string>
</resources>