<?xml version="1.0" encoding="utf-8"?>
<!-- Specie 2 tab -->
        	<!-- inicia el ScrollView -->
        	<LinearLayout
				android:id="@+id/tab4"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/background"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
        	<ScrollView 
        	    android:layout_width="fill_parent"
        		android:layout_height="fill_parent">
        	<LinearLayout
				android:id="@+id/insidetab4"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
				<TextView
					android:id="@+id/specie2_txt1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/specie_txt1" />
				<EditText
					android:id="@+id/specie2_edit1"
					android:hint="@string/specie_txt1_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/specie2_txt2"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/specie_txt2" />
				<EditText
					android:id="@+id/specie2_edit2"
					android:hint="@string/specie_txt2_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/specie2_txt3"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/specie_txt3" />
				<EditText
					android:id="@+id/specie2_edit3"
					android:hint="@string/specie_txt3_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/specie2_txt6"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/specie_txt6" />
				<EditText
					android:id="@+id/specie2_edit6"
					android:hint="@string/specie_txt6_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/specie2_txt7"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/specie_txt7" />
				<EditText
					android:id="@+id/specie2_edit7"
					android:hint="@string/specie_txt7_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/specie2_txt4"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/specie_txt4" />
				<EditText
					android:id="@+id/specie2_edit4"
					android:hint="@string/specie_txt4_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/specie2_txt5"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/specie_txt5" />
				<EditText
					android:id="@+id/specie2_edit5"
					android:hint="@string/specie_txt5_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/specie2_txt8"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/specie_txt8" />
				<EditText
					android:id="@+id/specie2_edit8"
					android:hint="@string/specie_txt8_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<Button
					android:id="@+id/specie2_update"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="70dip"
					android:text="@string/update" 
					/>
        	</LinearLayout>
        	</ScrollView>
        	</LinearLayout>