<?xml version="1.0" encoding="utf-8"?>
 <!-- Plants tab -->
            <!-- inicia el ScrollView -->
   			<LinearLayout
				android:id="@+id/tab2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/background"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
        	<ScrollView 
        	    android:layout_width="fill_parent"
        		android:layout_height="fill_parent">
          	<LinearLayout
				android:id="@+id/insidetab2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
				<TextView
					android:id="@+id/grow_txt1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/grow_txt1" />
				<EditText
					android:id="@+id/grow_edit1"
					android:hint="@string/grow_txt1_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/grow_txt2"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/grow_txt2" />
				<EditText
					android:id="@+id/grow_edit2"
					android:hint="@string/grow_txt2_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/rain_txt1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/rain_txt1" />
				<EditText
					android:id="@+id/rain_edit1"
					android:hint="@string/rain_txt1_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/rain_txt2"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/rain_txt2" />
				<EditText
					android:id="@+id/rain_edit2"
					android:hint="@string/rain_txt2_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/rain_txt3"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/rain_txt3" />
				<EditText
					android:id="@+id/rain_edit3"
					android:hint="@string/rain_txt3_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<Button
					android:id="@+id/plants_update"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="70dip"
					android:text="@string/update" 
					/>
        	</LinearLayout>
        	</ScrollView>
        	</LinearLayout>